--- a/index.html
+++ b/index.html
@@ -456,7 +456,7 @@
                         </div>
                     </div>
                     <div class="buttons-navbar">
-                        <a href="https://t.me/" class="social-button w-inline-block">
+                        <a href="https://t.me/polygonstarchannel" class="social-button w-inline-block">
                             <div class="icon w-embed"><svg xmlns="http://www.w3.org/2000/svg" width="38" height="32"
                                     fill="none">
                                     <path fill-rule="evenodd" clip-rule="evenodd"
@@ -474,23 +474,25 @@
                             <div class="cubs3"></div>
                             <div class="cubs4"></div>
                         </a>
-                        <a href="https://twitter.com/" class="social-button w-inline-block">
+                        <a href="https://x.com/PolygonStarFi" class="social-button w-inline-block">
                             <div class="cubs1"></div>
                             <div class="cubs2"></div>
                             <div class="cubs3"></div>
                             <div class="cubs4"></div>
-                            <div class="icon w-embed"><svg xmlns="http://www.w3.org/2000/svg" width="34" height="40"
+                            <div class="icon w-embed">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="41" height="32" viewBox="0 0 1668.56 1221.19"
                                     fill="none">
-                                    <path
-                                        d="M6 0h2v2h4v2h2V2h10v2h2V2h4V0h2v8h2v14h-2v2h-2v2h-6v2h2v12H12v-2H8v-2H6v-2H4v-4H0v-4h4v2h2v2h2v2h2v2h2v-4h2v-4H8v-2H6v-2H4V8h2V0z"
-                                        fill="#00FFC2" />
-                                </svg></div>
-                            <div class="icon-mobile w-embed"><svg xmlns="http://www.w3.org/2000/svg" width="27"
-                                    height="20" viewBox="0 0 27 20" fill="none">
-                                    <path fill-rule="evenodd" clip-rule="evenodd"
-                                        d="M15 0.714248V1.42853H14.25H13.5V2.14282V2.8571H12.75H12V5.71425V8.57139H10.5H9V7.85711V7.14282H8.25H7.5V6.42853V5.71425H6.75H6V4.99996V4.28568H3H0V4.99996V5.71425H0.75H1.5V7.14282V8.57139H2.25H3V9.28568V9.99996H3.75H4.5V10.7142V11.4285H5.25H6V12.1428V12.8571H6.75H7.5V13.5714V14.2857H6.75H6V15V15.7142H5.25H4.5V16.4285V17.1428H3.75H3V16.4285V15.7142H2.25H1.5V15V14.2857H0.75H0V16.4285V18.5714H0.75H1.5V19.2857V20H8.25H15V19.2857V18.5714H15.75H16.5V17.8571V17.1428H18H19.5V16.4285V15.7142H21H22.5V14.2857V12.8571H23.25H24V9.28568V5.71425H24.75H25.5V6.42853V7.14282H26.25H27V6.42853V5.71425H26.25H25.5V4.99996V4.28568H26.25H27V3.57139V2.8571H26.25H25.5V3.57139V4.28568H24.75H24V3.57139V2.8571H23.25H22.5V2.14282V1.42853H21.75H21V0.714248V-3.8147e-05H18H15V0.714248Z"
-                                        fill="#00FFC2" />
-                                </svg></div>
+                                    <path fill="#00FFC2" id="path1009" d="M283.94,167.31l386.39,516.64L281.5,1104h87.51l340.42-367.76L984.48,1104h297.8L874.15,558.3l361.92-390.99
+		                                h-87.51l-313.51,338.7l-253.31-338.7H283.94z M412.63,231.77h136.81l604.13,807.76h-136.81L412.63,231.77z"/>
+                                </svg>
+                            </div>
+                            <div class="icon-mobile w-embed">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="41" height="32" viewBox="0 0 1668.56 1221.19"
+                                    fill="none">
+                                    <path fill="#00FFC2" id="path1009" d="M283.94,167.31l386.39,516.64L281.5,1104h87.51l340.42-367.76L984.48,1104h297.8L874.15,558.3l361.92-390.99
+		                                h-87.51l-313.51,338.7l-253.31-338.7H283.94z M412.63,231.77h136.81l604.13,807.76h-136.81L412.63,231.77z"/>
+                                </svg>
+                            </div>
                         </a>
                         <a href="https://docs.polygonstar.xyz" class="social-button w-inline-block">
                             <div class="cubs1"></div>
@@ -611,41 +613,6 @@
                     </div>
                 </div>
             </div>
-            <!-- <div class="moove-to-rail">
-                <div class="grid-w">
-                    <div class="mask">
-                        <div class="main-grig-w"><img
-                                src="https://assets.website-files.com/62befe0d44fbe56e05bb6e1a/62befe0d44fbe5e9c7bb6e4c_Setka-min.svg"
-                                loading="lazy" alt="" class="main-grid-ing" /><img
-                                src="https://assets.website-files.com/62befe0d44fbe56e05bb6e1a/62befe0d44fbe5c543bb6e5f_grid%20(Stroke)-min.svg"
-                                loading="lazy" alt="" class="tablet-grid-ing" /><img
-                                src="https://assets.website-files.com/62befe0d44fbe56e05bb6e1a/62befe0d44fbe50d20bb6e6a_Grid-min.svg"
-                                loading="lazy" alt="" class="phone-grid-ing" /></div>
-                        <div class="frame-1"><img
-                                src="assets/img/1.svg"
-                                loading="lazy" alt="" class="frame-block-1" /><img
-                                src="assets/img/1.svg"
-                                loading="lazy" alt="" class="frame-block-1-tablet" /><img
-                                src="assets/img/1.svg"
-                                loading="lazy" alt="" class="frame-block-1-phone" /></div>
-                        <div class="frame-2"><img
-                                src="assets/img/2.svg"
-                                loading="lazy" alt="" class="frame-block-2" /><img
-                                src="assets/img/2.svg"
-                                loading="lazy" alt="" class="frame-block-2-tablet" /><img
-                                src="assets/img/2.svg"
-                                loading="lazy" alt="" class="frame-block-2-phone" /></div>
-                        <div class="frame-3"><img
-                                src="assets/img/3.svg"
-                                loading="lazy" alt="" class="frame-block-3" /><img
-                                src="assets/img/3.svg"
-                                loading="lazy" alt="" class="frame-block-3-tablet" /><img
-                                src="assets/img/3.svg"
-                                loading="lazy" alt="" class="frame-block-3-phone" /></div>
-                    </div>
-                </div>
-                <div class="target"></div>
-            </div> -->
         </div>
         <div class="container-main mt-8px w-container">
             <div class="container">
@@ -1114,7 +1081,7 @@
             <div class="main-social-block">
                 <div class="footer-link-w">
                     <div class="buttons-1">
-                        <a href="https://t.me/" class="social-button w-inline-block">
+                        <a href="https://t.me/polygonstarchannel" class="social-button w-inline-block">
                             <div class="icon w-embed"><svg xmlns="http://www.w3.org/2000/svg" width="38" height="32"
                                     fill="none">
                                     <path fill-rule="evenodd" clip-rule="evenodd"
@@ -1132,17 +1099,18 @@
                             <div class="cubs3"></div>
                             <div class="cubs4"></div>
                         </a>
-                        <a href="https://twitter.com/" class="social-button w-inline-block">
+                        <a href="https://x.com/PolygonStarFi" class="social-button w-inline-block">
                             <div class="cubs1"></div>
                             <div class="cubs2"></div>
                             <div class="cubs3"></div>
                             <div class="cubs4"></div>
-                            <div class="icon w-embed"><svg xmlns="http://www.w3.org/2000/svg" width="41" height="32"
+                            <div class="icon w-embed">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="41" height="32" viewBox="0 0 1668.56 1221.19"
                                     fill="none">
-                                    <path fill-rule="evenodd" clip-rule="evenodd"
-                                        d="M22.778 1.143v1.143H20.5V4.57h-2.278v9.143h-4.555V11.43H11.389V9.143H9.11V6.857H0v2.286h2.278v4.571h2.278V16H6.834v2.286H9.111v2.285h2.277v2.286H9.11v2.286H6.833v2.286H4.556v-2.286H2.278v-2.286H0V29.714h2.278V32h20.5v-2.286h2.278V27.43h4.555v-2.286h4.556V20.57h2.277V9.143H38.722v2.286H41V9.143h-2.278V6.857H41V4.571h-2.278v2.286h-2.278V4.571H34.166V2.286H31.889V0h-9.11v1.143z"
-                                        fill="#00FFC2" />
-                                </svg></div>
+                                    <path fill="#00FFC2" id="path1009" d="M283.94,167.31l386.39,516.64L281.5,1104h87.51l340.42-367.76L984.48,1104h297.8L874.15,558.3l361.92-390.99
+		                                h-87.51l-313.51,338.7l-253.31-338.7H283.94z M412.63,231.77h136.81l604.13,807.76h-136.81L412.63,231.77z"/>
+                                </svg>
+                            </div>
                             <div class="icon-mobile w-embed"><svg xmlns="http://www.w3.org/2000/svg" width="26"
                                     height="20" fill="none">
                                     <path fill-rule="evenodd" clip-rule="evenodd"
@@ -1182,12 +1150,11 @@
                                     <path fill='#00FFC2' d="M15 12A13 13 0 1015 38 13 13 0 1015 12zM35.5 13c-3.59 0-6.5 5.373-6.5 12 0 1.243.102 2.441.292 3.568.253 1.503.662 2.879 1.192 4.065.265.593.56 1.138.881 1.627.642.978 1.388 1.733 2.202 2.201C34.178 36.811 34.827 37 35.5 37s1.322-.189 1.933-.539c.814-.468 1.56-1.223 2.202-2.201.321-.489.616-1.034.881-1.627.53-1.185.939-2.562 1.192-4.065C41.898 27.441 42 26.243 42 25 42 18.373 39.09 13 35.5 13zM45.5 14c-.259 0-.509.173-.743.495-.157.214-.307.494-.448.833-.071.169-.14.353-.206.551-.133.395-.257.846-.37 1.343-.226.995-.409 2.181-.536 3.497-.063.658-.112 1.349-.146 2.065C43.017 23.499 43 24.241 43 25s.017 1.501.051 2.217c.033.716.082 1.407.146 2.065.127 1.316.31 2.501.536 3.497.113.498.237.948.37 1.343.066.198.135.382.206.551.142.339.292.619.448.833C44.991 35.827 45.241 36 45.5 36c1.381 0 2.5-4.925 2.5-11S46.881 14 45.5 14z"></path>
                                 </svg>
                             </div>
-                            <div class="icon-mobile w-embed"><svg xmlns="http://www.w3.org/2000/svg" width="21"
-                                    height="24" fill="none">
-                                    <path
-                                        d="M3.706 0H4.94v1.2h2.47v1.2h1.236V1.2h6.176v1.2h1.236V1.2h2.47V0h1.236v4.8H21v8.4h-1.235v1.2h-1.236v1.2h-3.706v1.2h1.236V24H7.412v-1.2h-2.47v-1.2H3.705v-1.2H2.47V18H0v-2.4h2.47v1.2h1.236V18H4.94v1.2h1.235v1.2h1.236V18h1.235v-2.4H4.941v-1.2H3.706v-1.2H2.47V4.8h1.235V0z"
-                                        fill="#00FFC2" />
-                                </svg></div>
+                            <div class="icon-mobile w-embed">
+                                <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="30" height="30" viewBox="0 0 50 50">
+                                    <path fill='#00FFC2' d="M15 12A13 13 0 1015 38 13 13 0 1015 12zM35.5 13c-3.59 0-6.5 5.373-6.5 12 0 1.243.102 2.441.292 3.568.253 1.503.662 2.879 1.192 4.065.265.593.56 1.138.881 1.627.642.978 1.388 1.733 2.202 2.201C34.178 36.811 34.827 37 35.5 37s1.322-.189 1.933-.539c.814-.468 1.56-1.223 2.202-2.201.321-.489.616-1.034.881-1.627.53-1.185.939-2.562 1.192-4.065C41.898 27.441 42 26.243 42 25 42 18.373 39.09 13 35.5 13zM45.5 14c-.259 0-.509.173-.743.495-.157.214-.307.494-.448.833-.071.169-.14.353-.206.551-.133.395-.257.846-.37 1.343-.226.995-.409 2.181-.536 3.497-.063.658-.112 1.349-.146 2.065C43.017 23.499 43 24.241 43 25s.017 1.501.051 2.217c.033.716.082 1.407.146 2.065.127 1.316.31 2.501.536 3.497.113.498.237.948.37 1.343.066.198.135.382.206.551.142.339.292.619.448.833C44.991 35.827 45.241 36 45.5 36c1.381 0 2.5-4.925 2.5-11S46.881 14 45.5 14z"></path>
+                                </svg>
+                            </div>
                         </a>
                     </div>
                 </div>
