feat: added etherscan logo

--- a/index.html
+++ b/index.html
@@ -1004,6 +1004,12 @@
                     </div>
                     <div class="right-content-block">
                         <div class="brands-w-line">
+                            <p class="subhead-l">CA:  </p>
+                            <p class="subhead-l">0x0f3b904172f937748af7f09353b016219a14562c</p>
+                            <div class="logo-img-w">
+                            </div>
+                        </div>
+                        <div class="brands-w-line">
                             <p class="subhead-l">Token Name  </p>
                             <div class="line-brands">
                                 <p class="subhead-l">- — — — — — — — —</p>
