feat: added dapp link

--- a/index.html
+++ b/index.html
@@ -805,7 +805,7 @@
                 </div>
                 <div class="buttons-w">
                     <div data-w-id="be35e6fb-6e3c-2c57-11fe-a26c0aaa575f" class="button-ll margin-right">
-                        <a href="#" class="button-layout-1-l w-inline-block">
+                        <a href="https://app.polygonstar.xyz" class="button-layout-1-l w-inline-block">
                             <div class="hover-w">
                                 <div style="width:100%" class="top-line-hover"></div>
                                 <div class="left-line-hover"></div>
