feat: updated UI

--- a/index.html
+++ b/index.html
@@ -387,74 +387,11 @@
         <div class="nav-bar-container">
             <div class="navbar-main-block"><a href="/" aria-current="page" class="brand w-nav-brand w--current"><img
                         src="assets/img/logo_with_title.png" loading="lazy" alt="" class="image-all" /></a>
-                <div class="nav-bar-text-w">
-                    <p class="label-s">newsletter</p>
-                </div>
             </div>
             <nav role="navigation" class="nav-menu w-nav-menu">
-                <div class="mibile-wrap">
-                    <div class="wrap">
-                        <div class="nav-bar-text-w-mobile">
-                            <p class="label-s">newsletter</p>
-                        </div>
-                        <div class="form-block w-form">
-                            <form id="email-form" name="email-form" data-name="Email Form" method="get" class="form">
-                                <input type="email" class="text-field w-input" maxlength="256" name="email"
-                                    data-name="Email" placeholder="Enter your e-mail" id="email" required="" /><input
-                                    type="submit" value="" data-wait="" data-w-id="4d32c044-8bfe-0884-f2a6-155c0b44cded"
-                                    class="submit-button w-button" />
-                                <div class="button-form">
-                                    <div class="button-form-layuot">
-                                        <div class="button-layout-form-back"></div>
-                                        <div class="button-layout-form">
-                                            <p class="button-text">subscribe</p>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div id="cursorEmail" class="cursor"></div>
-                            </form>
-                            <div id="errorM" class="message-error trig w-form-done">
-                                <div class="main-message-w">
-                                    <p class="label-l">Thanks for your email!</p>
-                                    <p class="subhead-s mt-12px">We&#x27;ll keep you in touch about Polygon Star updates
-                                    </p>
-                                    <div data-w-id="22c8573e-b1d1-827c-9f23-d895de2c57ee" class="button-ll mt-56px">
-                                        <a href="/" aria-current="page"
-                                            class="button-layout-1-l w-inline-block w--current">
-                                            <div class="hover-w">
-                                                <div style="width:100%" class="top-line-hover"></div>
-                                                <div class="left-line-hover"></div>
-                                                <div style="width:0%" class="bottom-line-hover"></div>
-                                                <div class="button-layout-2-l">
-                                                    <p class="button-text">okay</p>
-                                                </div>
-                                            </div>
-                                        </a>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="message-error trig w-form-fail">
-                                <div class="main-message-w">
-                                    <div class="text-message-w">
-                                        <p class="label-l">Oops! Something went wrong while submitting the form.</p>
-                                    </div>
-                                    <div data-w-id="89765893-a78e-3706-5ed4-f995e7688013" class="button-ll mt-20px">
-                                        <a href="/" aria-current="page"
-                                            class="button-layout-1-l w-inline-block w--current">
-                                            <div class="hover-w">
-                                                <div style="width:100%" class="top-line-hover"></div>
-                                                <div class="left-line-hover"></div>
-                                                <div style="width:0%" class="bottom-line-hover"></div>
-                                                <div class="button-layout-2-l">
-                                                    <p class="button-text">okay</p>
-                                                </div>
-                                            </div>
-                                        </a>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
+                <a href="https://app.polygonstar.xyz" target="_blank" class="button-text nav-button">Launch App</a>
+                <a href="https://t.me/polygonstarchannel" target="_blank" class="button-text nav-button">Join Community</a>
+                <div class="mobile-wrap">
                     <div class="buttons-navbar">
                         <a href="https://t.me/polygonstarchannel" class="social-button w-inline-block">
                             <div class="icon w-embed"><svg xmlns="http://www.w3.org/2000/svg" width="38" height="32"
@@ -653,22 +590,22 @@
                                 <div class="mobile-w">
                                     <div class="block-content-1 box box1">
                                         <p class="subhead-s">
-                                            - Website Release
+                                            🟢 Website Release
                                         </p>
                                         <p class="subhead-s">
-                                            - Community Build
+                                            🟢 Community Build
                                         </p>
                                         <p class="subhead-s">
-                                            - Token Launch on Ethereum
+                                            🟢 Token Launch on Ethereum
                                         </p>
                                         <p class="subhead-s">
-                                            - Social Creation
+                                            🟢 Social Creation
                                         </p>
                                         <p class="subhead-s">
-                                            - Marketing Start
+                                            🟢 Marketing Start
                                         </p>
                                         <p class="subhead-s">
-                                            - Farming & Pool Beta Release
+                                            🟢 Farming & Pool Beta Release
                                         </p>
                                     </div>
                                 </div>
@@ -688,19 +625,19 @@
                                 <div class="mobile-w-r">
                                     <div class="block-content-2 box box2">
                                         <p class="subhead-s">
-                                            - Influencer partnership
+                                            🟢 Influencer partnership
                                         </p>
                                         <p class="subhead-s">
-                                            - CG, CMC list
+                                            ⛔ CG, CMC list
                                         </p>
                                         <p class="subhead-s">
-                                            - CA Audit from Interfi
+                                            🟠 CA Audit from SolidProof
                                         </p>
                                         <p class="subhead-s">
-                                            - Youtube & Twitter Campaign
+                                            🟠 Youtube & Twitter Campaign
                                         </p>
                                         <p class="subhead-s">
-                                            - Polygon Star Dex Release
+                                            🟠 Polygon Star Dex Release
                                         </p>
                                     </div>
                                 </div>
@@ -718,19 +655,19 @@
                                 <div class="mobile-w">
                                     <div class="block-content-3 box box3">
                                         <p class="subhead-s">
-                                            - Dextools Trending
+                                            ⛔ Dextools Trending
                                         </p>
                                         <p class="subhead-s">
-                                            - Ecosystem Audit from SolidProof
+                                            ⛔ Ecosystem Audit from SolidProof
                                         </p>
                                         <p class="subhead-s">
-                                            - Partnership Continuous
+                                            🟠 Partnership Continuous
                                         </p>
                                         <p class="subhead-s">
-                                            - Dev Team Expansion
+                                            🟠 Dev Team Expansion
                                         </p>
                                         <p class="subhead-s">
-                                            - Launchpad Reelase
+                                            ⛔ Launchpad Release
                                         </p>
                                     </div>
                                 </div>
@@ -750,16 +687,16 @@
                                 <div class="mobile-w-r-4">
                                     <div class="block-content-4 box box4">
                                         <p class="subhead-s">
-                                            - Pulsechain Integration
+                                            ⛔ Pulsechain Integration
                                         </p>
                                         <p class="subhead-s">
-                                            - Chain Bridge Release
+                                            ⛔ Chain Bridge Release
                                         </p>
                                         <p class="subhead-s">
-                                            - AMA host
+                                            ⛔ AMA host
                                         </p>
                                         <p class="subhead-s">
-                                            - DAO Establish
+                                            ⛔ DAO Establish
                                         </p>
                                         <div class="trig-yllow-l"></div>
                                         <div class="trig-yllow-r"></div>
@@ -784,8 +721,8 @@
         <div class="container-main w-container">
             <div class="main-color-block">
                 <div class="content-block">
-                    <div class="book-w"><img src="assets/img/banner.png" loading="lazy"
-                            srcset="assets/img/banner.png 500w, assets/img/banner.png 800w" alt=""
+                    <div class="book-w"><img src="assets/img/banner1.png" loading="lazy"
+                            srcset="assets/img/banner1.png 500w, assets/img/banner1.png 800w" alt=""
                             sizes="(max-width: 479px) 300px, (max-width: 991px) 393px, 28vw"
                             class="image-all book-img" /></div>
                     <div class="content-block-w">
@@ -840,7 +777,8 @@
                             </div>
                         </a>
                     </div>
-                </div><a href="https://github.com/" class="button-botom-trig w-inline-block"></a>
+                </div>
+                <a href="https://github.com/" class="button-botom-trig w-inline-block"></a>
                 <div class="trig-1"></div>
                 <div class="trig-2"></div>
                 <div class="trig-3"></div>
